Fixed spacing issue and errors not displaying on garment modal

--- a/src/components/AddItemModal/AddItemModal.css
+++ b/src/components/AddItemModal/AddItemModal.css
@@ -9,6 +9,7 @@
   font-size: 16px;
   line-height: 20px;
   color: rgba(255, 77, 0, 1);
+  max-width: 300px;
   margin: 6px 0 8px 0;
 }
 
