--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   background-color: rgba(243, 243, 243, 1);
   display: flex;
   justify-content: space-between;
-  padding: 32px 40px 0; 
+  padding: 55px 40px;
 }
 .footer__text {
   font-family: "Cabinet Grotesk", sans-serif;
